# nyaasi

./: .gitignore  Cargo.toml
nyaasi-scraper/: Cargo.toml
nyaasi-scraper/src/: lib.rs  magnet_uri.rs  size_parser.rs
src/: args.rs  main.rs  parser.rs  size_parser.rs
