[package]
name = "nyaasi"
version = "0.1.0"
authors = ["natanbc <natanbc@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap =             "2.33.0"
kuchiki =          "0.7.3"
lazy_static =      "1.4.0"
reqwest =          "0.9.20"
serde =            "1.0.100"
serde_json =       "1.0.40"
serde_derive =     "1.0.100"
serde_urlencoded = "0.5.3"
