[package]
name = "nyaasi"
version = "0.1.0"
authors = ["natanbc <natanbc@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap =           { version = "2.33.0", features = ["suggestions", "color", "wrap_help"] }
lazy_static =    "1.4.0"
nyaasi-scraper = { path = "nyaasi-scraper" }
reqwest =        "0.9.20"
serde_json =     "1.0.40"
url =            "2.1.0"
