[package]
name = "nyaasi-scraper"
version = "0.2"
authors = ["natanbc <natanbc@users.noreply.github.com>"]
description = "A library for parsing scraped html from https://nyaa.si"
repository = "https://github.com/natanbc/nyaasi"
documentation = "https://docs.rs/nyaasi-scraper/"
license = "Apache-2.0"
keywords = ["HTML", "scrape", "anime"]
edition = "2018"

[dependencies]
kuchiki =          "0.7.3"
lazy_static =      "1.4.0"
serde =            "1.0.100"
serde_derive =     "1.0.100"
serde_urlencoded = "0.5.3"
url =              "2.1.0"
